View Issue Details

IDProjectCategoryView StatusLast Update
0023749Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:22
ReporteremvAssigned Toemv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023749: Tests cases boolean bsection M9 N4 work incorrect with new Boolean Operation Algorithm
DescriptionTests cases boolean bsection M9 N4 work incorrect with new Boolean Operation Algorithm.
Steps To Reproduce1. a. test boolean bsection M9
   b. restore [locate_data_file lh3d_px1.brep] b1
      explode b1 f; compound b1_253 b1_296 b1
      plane p 0 60*100 0 0 1 0
      mkface b2 p
      bsection r b1 b2
      #exception

2. a. test boolean bsection N4
   b. restore [locate_data_file lh3d_px2.brep] b1
      explode b1 f; compound b1_408 b1_530 b1
      set i 150
      plane p 0 $i*100 0 0 1 0
      mkface b2 p
      bsection r b1 b2
      checkshape r
      #result is not valid (BRepCheck_InvalidPointOnCurve)
TagsNo tags attached.
Test case numberboolean bsection(015) M9 N4

Relationships

child of 0021762 closedemv Integration new Boolean Operation algorithm to OCC 

Activities

emv

2013-02-12 07:18

developer   ~0023304

Git branch CR23749 is ready to be reviewed.

mkv

2013-02-13 19:38

tester   ~0023328

Dear BugMaster,

Branch CR23749 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: f341f04aeedda82eed3bdde13b474768eca14b9a

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 39 (39 on master)

products component :
Linux: 9 (9 on master)
Windows: 59 (50 on master)

Regressions:
No regressions

Improvements:
http://occt-tests/CR23749-master-occt/Mandriva2010/bugs/modalg_4/bug726_1.html
bugs modalg_4(009) bug726_1

Testing cases:
boolean bsection(015) M9 N4 - OK

Testing on Linux:
Total MEMORY difference: 237932872 / 237708772
Total CPU difference: 10105.860000000153 / 8462.160000000538

Testing on Windows:
Total MEMORY difference: 336889548 / 337038556
Total CPU difference: 15064.09375 / 13034.4375

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 5f05c0a3

2013-02-15 12:49:54

emv

Details Diff
0023749: Tests cases boolean bsection M9 N4 work incorrect with new Boolean Operation Algorithm.
Fix for the cases.
Small correction test cases
Affected Issues
0023749
mod - src/BOPAlgo/BOPAlgo_Builder.cxx Diff File
mod - src/BOPInt/BOPInt_ShrunkRange.cxx Diff File
mod - tests/boolean/bsection/M9 Diff File
mod - tests/boolean/bsection/N4 Diff File
mod - tests/bugs/modalg_4/bug726_1 Diff File

Issue History

Date Modified Username Field Change
2013-02-11 14:48 emv New Issue
2013-02-11 14:48 emv Assigned To => emv
2013-02-11 14:49 emv Relationship added child of 0021762
2013-02-11 14:51 emv Summary Tests cases boolean bsection M9 N4 works incorrect with new Boolean Operation Algorithm => Tests cases boolean bsection M9 N4 work incorrect with new Boolean Operation Algorithm
2013-02-11 14:51 emv Description Updated
2013-02-12 07:18 emv Note Added: 0023304
2013-02-12 07:18 emv Assigned To emv => pkv
2013-02-12 07:18 emv Status new => resolved
2013-02-12 07:23 pkv Status resolved => reviewed
2013-02-12 07:23 pkv Assigned To pkv => mkv
2013-02-12 12:02 emv Steps to Reproduce Updated
2013-02-13 19:38 mkv Note Added: 0023328
2013-02-13 19:38 mkv Test case number => boolean bsection(015) M9 N4
2013-02-13 19:38 mkv Assigned To mkv => bugmaster
2013-02-13 19:38 mkv Status reviewed => tested
2013-02-18 17:06 emv Changeset attached => occt master 5f05c0a3
2013-02-18 17:06 emv Assigned To bugmaster => emv
2013-02-18 17:06 emv Status tested => verified
2013-02-18 17:06 emv Resolution open => fixed
2013-02-20 10:19 bugmaster Target Version => 6.6.0
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:22 aiv Fixed in Version => 6.6.0