0023749: Tests cases boolean bsection M9 N4 work incorrect with new Boolean Operation Algorithm. Fix for the cases. Small correction test cases